--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "arrow-parens": [
+            "error",
+            "as-needed"
+        ],
         "no-unused-vars": [
             "error",
             {
