a few intermediate changes

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@marginswap/core-abi": "1.0",
+    "@marginswap/core-abi": "1.1.9",
+    "@truffle/hdwallet-provider": "^1.3.0",
     "dotenv": "^8.2.0",
     "immutable": "^4.0.0-rc.12",
     "node-fetch": "^2.6.1",
