--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@marginswap/core-abi": "1.2.1",
     "@truffle/hdwallet-provider": "^1.3.0",
     "dotenv": "^8.2.0",
+    "ethers": "^5.1.4",
     "immutable": "^4.0.0-rc.12",
     "node-fetch": "^2.6.1",
     "ts-node": "^9.1.1",
